refactor: 카테고리 response 구조 버그 수정