@@ -2,7 +2,8 @@ package com.test.ecommerce.domain.category.service;
 
 import com.test.ecommerce.common.GlobalException;
 import com.test.ecommerce.common.exceptionCode.CategoryExceptionCode;
-import com.test.ecommerce.domain.category.dto.CategoryRequest;
+import com.test.ecommerce.domain.category.dto.CategoryCreateRequest;
+import com.test.ecommerce.domain.category.dto.CategoryModifyRequest;
 import com.test.ecommerce.domain.category.dto.CategoryResponse;
 import com.test.ecommerce.domain.category.entity.Category;
 import com.test.ecommerce.domain.category.mapper.CategoryMapper;
@@ -14,7 +15,8 @@ import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,14 +28,31 @@ public class CategoryService {
     @Cacheable(value = "categoryList", key = "'allCategories'")
     public List<CategoryResponse> getCategories() {
         List<Category> categories = categoryRepository.findAll();
-        return categories.stream()
+        Map<Long, List<CategoryResponse>> categoryMap = categories.stream()
+                .filter(category -> !category.getIsDelete())
                 .map(CategoryMapper.INSTANCE::toResponse)
-                .toList();
+                .collect(Collectors.groupingBy(CategoryResponse::getParentId, TreeMap::new, Collectors.toList()));
+
+        List<CategoryResponse> response = new ArrayList<>();
+        categoryMap.forEach((k, v) -> {
+            if (k.equals(0L)) {
+                response.addAll(v);
+                response.sort(Comparator.comparing(CategoryResponse::getSort));
+            } else {
+                v.sort(Comparator.comparing(CategoryResponse::getSort));
+                response.forEach(parent -> {
+                    if (parent.getId().equals(k)) {
+                        parent.setSubCategories(v);
+                    }
+                });
+            }
+        });
+        return response;
     }
 
     @Transactional
     @CacheEvict(value = "categoryList", key = "'allCategories'")
-    public CategoryResponse createCategory(CategoryRequest request) {
+    public CategoryResponse createCategory(CategoryCreateRequest request) {
         Category category = CategoryMapper.INSTANCE.toEntity(request);
         Category savedCategory = categoryRepository.save(category);
         return CategoryMapper.INSTANCE.toResponse(savedCategory);
@@ -41,14 +60,14 @@ public class CategoryService {
 
     @Transactional
     @CacheEvict(value = "categoryList", key = "'allCategories'")
-    public CategoryResponse modifyCategory(Long id, CategoryRequest request) {
+    public CategoryResponse modifyCategory(Long id, CategoryModifyRequest request) {
         Category category = categoryRepository.findById(id)
                 .orElseThrow(() -> new GlobalException(CategoryExceptionCode.NOT_FOUND_CATEGORY));
         updateCategory(category, request);
         return CategoryMapper.INSTANCE.toResponse(category);
     }
 
-    private void updateCategory(Category category, CategoryRequest request) {
+    private void updateCategory(Category category, CategoryModifyRequest request) {
         category.setParentId(request.getParentId());
         category.setCategoryName(request.getCategoryName());
         category.setDepth(request.getDepth());
